feat(lib): add multiple files to same identifier

--- a/translations/pt_BR.json
+++ b/translations/pt_BR.json
@@ -7,7 +7,7 @@
     "items": {
         "equipments": {
             "armor": {
-                "description": "Armadura text",
+                "description": "Armadura texto",
                 "singular": "{{.Name}} tem {{.Count}} Armadura.",
                 "plural": "{{.Name}} tem {{.Count}} Armaduras.",
                 "none": "{{.Name}} não tem Armadura."
